<?xml version="1.0"?>
<package format="2">
  <name>lidar_ndt_localization</name>
  <version>0.0.0</version>
  <description>The lidar_ndt_localization package</description>

  <maintainer email="rickesh.t.n@gmail.com">koide</maintainer>

  <license>BSD</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ndt_omp</build_depend>
  <build_depend>fast_gicp</build_depend>
  <build_depend>hdl_global_localization</build_depend>

  <!-- Run dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ndt_omp</exec_depend>
  <exec_depend>fast_gicp</exec_depend>
  <exec_depend>hdl_global_localization</exec_depend>

  <!-- Export dependencies and plugin information -->
  <export>
    <!-- If using nodelets, retain this line. Otherwise, remove it. -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
